--- a/biçim.css
+++ b/biçim.css
@@ -11,7 +11,7 @@ html, body {
 body {
   background-color: #151515;
   color: #f0f0f0;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.6;
   transition: background-color 0.3s, color 0.3s;
   overflow: hidden;
@@ -60,13 +60,13 @@ main {
   background-color: #1f1f1f;
   color: white;
   caret-color: #32CD32;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .hortlak-yazı {
   position: absolute;
   color: #32CD32;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.2rem;
   pointer-events: none;
   white-space: nowrap;
